hphp/test/quick/trait_method_modif1.php.expectf

Fatal error: Access level to Bar::f() must be public (as in class Foo) or weaker in %s on line 12
